# coalesced-console-app

./: .env  .gitignore  CMakeLists.txt  README.md  activity3.cpp  app.cpp  app.txt  main.cpp  test.cpp  tutorial.cpp
app/: render_application.cpp
helpers/border/: border.h
includes/: apply_color.h  change_color.h  gotoxy.h  symbol.h
includes/constants/: escapeSequence.h  runtime.h
includes/cs1-gsix/: gotoxy.cpp  gotoxy.h
includes/utilities/: generateId.h  menu.cpp  screen.h
lib/: get_sum.cpp  get_sum.h
source/: app.cpp  app.h
src/: app.cpp  app.h  application.cpp  index.cpp  main.cpp  renderApplication.cpp
src/core/apps/: controller.cpp  index.cpp
src/core/component/: menu.cpp  text.cpp
src/core/components/: border.cpp  grid.cpp  header.cpp  input.cpp  menu.cpp  newLine.cpp  text.cpp  view.cpp
src/core/controllers/: menu.cpp
src/includes/constants/: alignment.cpp  app.cpp  appType.cpp  apps.cpp  border.cpp  color.cpp  datatype.cpp  escapeSequence.cpp  keyStroke.cpp  keycode.cpp  keycode.h  maximumLength.cpp  menu.cpp  runtime.cpp  validation.cpp
src/includes/helpers/: border.cpp  cleanUp.cpp  color.cpp  dataType.cpp  error.cpp  errorHandler.cpp  font.cpp  generateId.cpp  gotoxy.cpp  math.cpp  menu.cpp  returner.cpp  screen.cpp  search.cpp  string.cpp  symbol.cpp
src/includes/mockData/: students.cpp
src/includes/structures/: appContainer.cpp  borderStruct.cpp  inputParameter.cpp  menuStruct.cpp  screenInfo.h  screenStruct.cpp  textStruct.cpp
src/includes/utilities/: border.cpp  color.cpp  color.h  font.cpp  gotoxy.cpp  (+4 more)
src/main/: main.cpp
(+87 files in other folders)
